the swagger of CategoryController
